# libtorch-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pixi.toml
.github/workflows/: ci_macos.yml  ci_ubuntu.yml  ci_windows.yml
